--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ main {
   justify-content: center;
 }
 
+ul {
+  list-style: none;
+}
+
 .new-book-button {
   padding: 12px 25px;
   border: 3.5px solid #00712d;
@@ -45,16 +49,45 @@ main {
 
 dialog {
   width: 275px;
-  
   margin: auto;
 }
 
 dialog[open] {
   scale: 1;
   transition: scale 0.3s ease-in-out;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  padding: 15px;
+  border-radius: 15px;
+  text-align: center;
+
   @starting-style {
     scale: 0;
   }
+}
+
+.button-area {
+  display: flex;
+  width: 240px;
+  justify-content: flex-end;
+}
+
+.button-area > button {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  border: none;
+  background-color: #f6fb7a;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.button-area > button:hover {
+  background-color: #717238;
+  color: white;
 }
 
 .books {
