--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
 
 main {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #f6fb7a;
 }
 
@@ -99,6 +99,7 @@ dialog[open] {
   padding: 20px;
   row-gap: 35px;
   justify-items: center;
+  background-color: #f6fb7a;
 }
 
 .individual-book {
