--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ header {
 }
 
 main {
-  width: 100%;
-  height: 100vh;
   background-color: #f6fb7a;
 }
 
@@ -116,9 +114,50 @@ dialog[open] {
 h4,
 p {
   text-align: center;
+  margin: 4px 0;
 }
 
 .individual-book img {
   height: 350px;
   width: 290px;
+}
+
+.actions-buttons {
+  display: flex;
+  column-gap: 25px;
+  margin: 12px;
+}
+
+.deleteButton {
+  color: rgb(238, 238, 238);
+  background-color: rgb(255, 88, 88);
+  border: 3px solid rgb(98, 0, 0);
+  border-radius: 18px;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 5px 7.5px;
+  cursor: pointer;
+}
+
+.deleteButton:hover {
+  background-color: rgb(119, 45, 45);
+  color: red;
+  border: 3px solid white;
+}
+
+.changeReadIt {
+  font-size: 16px;
+  font-weight: 500;
+  width: 90px;
+  border-radius: 18px;
+  cursor: pointer;
+  background-color: rgb(176, 176, 43);
+  color: white;
+  border: 3px solid gold;
+}
+
+.changeReadIt:hover {
+  color: green;
+  background-color: rgb(255, 202, 103);
+  border-color: white;
 }
